# mimir

./: .gitignore  .gitmodules  Cargo.toml  build.rs
src/: error.rs  lib.rs  macros.rs  util.rs
src/common/: encoding.rs  error.rs  version.rs
src/connection/: mod.rs
src/context/: mod.rs  params.rs
src/data/: mod.rs
src/dequeue/: mod.rs
src/enqueue/: mod.rs
src/lob/: mod.rs
src/message/: mod.rs
src/object/: mod.rs
src/objectattr/: mod.rs
src/objecttype/: mod.rs
src/odpi/: constants.rs  enums.rs  externs.rs  flags.rs  structs.rs
src/pool/: mod.rs
src/query/: mod.rs
src/rowid/: mod.rs
src/statement/: mod.rs
src/subscription/: mod.rs
src/variable/: mod.rs
tests/: lib.rs
tests/connection/: mod.rs
tests/context/: mod.rs
tests/dequeue/: mod.rs
tests/enqueue/: mod.rs
tests/lob/: mod.rs
tests/macros/: mod.rs
tests/message/: mod.rs
tests/objecttype/: mod.rs
tests/pool/: mod.rs
tests/statement/: mod.rs
tests/variable/: mod.rs
