[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
description = "Rust bindings over the Oracle Database Programming Interface for Drivers and Applications"
documentation = "https://docs.rs/mimir"
homepage = "https://github.com/aesir-vanir/mimir"
keywords = [
    "oracle",
    "driver",
    "bindings",
]
license = "MIT/Apache-2.0"
name = "mimir"
readme = "README.md"
repository = "https://github.com/aesir-vanir/mimir"
version = "0.3.4"

[build-dependencies]
gcc = "0.3.45"

[dependencies]
bitflags = "0.9.1"
derive_builder = "0.5.1"
error-chain = "0.11.0"
getset = "0.0.5"
hex-slice = "0.1.0"
lazy_static = "0.2.8"
rand = "0.3.15"
slog-try = "0.1.0"

[dependencies.chrono]
features = ["serde"]
version = "0.4"

[dependencies.slog]
optional = true
version = "2"

[dev-dependencies]
slog-async = "2.1.0"
slog-term = "2.2.0"

[features]
debug = [
    "slog/max_level_debug",
    "slog/release_max_level_debug",
]
default = ["slog"]
trace = [
    "slog/max_level_trace",
    "slog/release_max_level_trace",
]
